2008-06-09  Colin Walters  <walters@verbum.org>

	Bug 534620: password field focus

	* src/krb5-auth-dialog.c: Be sure we focus the
	password field every time.
	Patch from from Guido Günther.

2008-06-09  Colin Walters  <walters@verbum.org>

	Bug 534515: cleanups

	* configure.in: Look for dbus-glib and not libgnome.
	Patch from from Guido Günther.

2008-06-09  Colin Walters  <walters@verbum.org>

	Bug 534515: cleanups

	* src/krb5-auth-dialog.c: Cleaner use of
	gboolean.  Patch from from Guido Günther.

2008-06-09  Colin Walters  <walters@verbum.org>

	Bug 534515: cleanups

	* src/krb5-auth-dialog.c: Use GOption instead of
	libgnome.  Patch from Guido Günther.

2008-06-09  Colin Walters  <walters@verbum.org>

	Bug 529220: set dialog icon

	* src/krb5-auth-dialog.c: Set an icon so we
	look nicer in the window list.  Patch from
	Guido Günther.

2008-03-22  Colin Walters  <walters@verbum.org>

	* src/krb5-auth-dialog.c: Grab a name on the
	session bus to be doubly sure we don't have
	multiple copies.  Also don't connect to the
	session manager, since it's not needed.

2008-03-22  Colin Walters  <walters@verbum.org>

	* MAINTAINERS: New file.
	* src/krb5-auth-dialog.c: Connect to session bus
	to be sure we exit when the session dies.

2006-10-29  Christopher Aillon  <caillon@redhat.com>

	* src/krb5-auth-dialog.c: Clean up the #ifdefs to
	make things slightly more readable.
	Refactor code slightly, removing an #ifdef in favor
	of a wrapper.  Consolidate coding style.

2006-07-24  Christopher Aillon  <caillon@redhat.com>

	* configure.ac: Release 0.7

2006-07-24  Christopher Aillon  <caillon@redhat.com>

	* src/krb5-auth-dialog.c: Don't immediately retry
	to reach the KDC if it is unavailable. That will
	just loop forever (until the KDC becomes available).
	Bail out; we'll check (once!) to see whether it's
	there the next time our g_timeout callback gets
	invoked.

2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.ac: Remove obsolete entry for no_NO